@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ActivationExceptionTests.cs" />
     <Compile Include="AssertThat.cs" />
+    <Compile Include="Extensions\ContainerExtensionTests.cs" />
     <Compile Include="GetCurrentRegistrationsTests.cs" />
     <Compile Include="GetRegistrationTests.cs" />
     <Compile Include="GetServiceTests.cs" />
