@@ -54,6 +54,8 @@
     <Compile Include="ActivationException.cs" />
     <Compile Include="CyclicDependencyValidator.cs" />
     <Compile Include="CyclicDependencyValidatorExtensions.cs" />
+    <Compile Include="Extensions\ContainerExtensions.cs" />
+    <Compile Include="Extensions\PropertyProducerPair.cs" />
     <Compile Include="ResolutionInstanceProducer.cs" />
     <Compile Include="Container.Registration.cs" />
     <Compile Include="Container.Resolving.cs" />
