@@ -73,6 +73,12 @@
     <Compile Include="..\SimpleInjector.NET\DelegateBuilder.cs">
       <Link>DelegateBuilder.cs</Link>
     </Compile>
+    <Compile Include="..\SimpleInjector.NET\Extensions\ContainerExtensions.cs">
+      <Link>Extensions\ContainerExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\SimpleInjector.NET\Extensions\PropertyProducerPair.cs">
+      <Link>Extensions\PropertyProducerPair.cs</Link>
+    </Compile>
     <Compile Include="..\SimpleInjector.NET\FuncInstanceProducer.cs">
       <Link>FuncInstanceProducer.cs</Link>
     </Compile>
